apps/infra-core/templates/tmyapp03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmyapp03
  namespace: tmyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tmyapp03
  template:
    metadata:
      labels:
        app: tmyapp03
    spec:
      containers:
        - name: tmyapp03
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tmyapp03
  namespace: tmyapp
spec:
  selector:
    app: tmyapp03
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
